--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,6 @@ background-color:#EEEEEE;
 	margin-right:10%;
 }
 
-#loka{
-	float:right;
-}
-
 #new-workspace{
 	margin-top:40px;
 }
@@ -19,30 +15,14 @@ background-color:#EEEEEE;
 	margin-top:10px;
 }
 
-.black_overlay{
-    display: none;
-	position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    z-index:1001;
-    -moz-opacity: 0.8;
-    opacity:.80;
-    filter: alpha(opacity=80);
-        }
-.white_content {
-    display: none;
-    position: absolute;
-    top: 25%;
-    left: 25%;
-    width: 50%;
-    height: 50%;
-    padding: 16px;
-    border: 8px solid Black;
-	border-radius: 10px;
-    background-color: white;
-    z-index:1002;
-    overflow: auto;
-        }
+
+dropdown-menu a{
+
+float:left;
+width:10px;
+
+}
+i {
+float:right;
+}
+
